# scanbridge

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
docs/: adding-backends.md  architecture.md  audit-logging.md  circuit-breaker.md  quarantine.md
examples/: basic_scan.rs  custom_backend.rs  with_circuit_breaker.rs
src/: lib.rs
src/audit/: events.rs  mod.rs
src/backends/: clamav.rs  mock.rs  mod.rs  virustotal.rs
src/circuit_breaker/: breaker.rs  config.rs  mod.rs  state.rs
src/core/: error.rs  hasher.rs  input.rs  mod.rs  result.rs  traits.rs  types.rs
src/manager/: mod.rs  queue.rs  retry.rs  scan_manager.rs
src/policy/: action.rs  engine.rs  mod.rs  rules.rs
src/quarantine/: filesystem.rs  mod.rs  record.rs  traits.rs
