[package]
name = "scanbridge"
version = "0.1.0"
edition = "2021"
authors = ["Scanbridge Contributors"]
description = "A unified, pluggable API for malware scanning with circuit breakers, policy enforcement, and audit logging"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/scanbridge"
keywords = ["malware", "antivirus", "scanning", "security", "clamav"]
categories = ["security", "api-bindings"]
readme = "README.md"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio"]
clamav = []
virustotal = ["reqwest"]

[dependencies]
# Core async support (runtime-agnostic)
async-trait = "0.1"

# Error handling
thiserror = "2"

# Structured logging/tracing
tracing = "0.1"

# Fast hashing for deduplication
blake3 = "1"

# Optional legacy hashes for external API compatibility
sha2 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }

# Time and serialization
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (optional, for tokio users)
tokio = { version = "1", features = ["io-util", "sync", "time", "fs", "rt"], optional = true }

# Secret handling for API keys
secrecy = { version = "0.10", features = ["serde"] }

# HTTP client for cloud APIs (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }

# UUID for identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Pin for async streams
pin-project-lite = "0.2"

# Futures utilities
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
tempfile = "3"
